objects/Wavier_Collaborator__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Manager_Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_Collaborator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Manager_Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_Collaborator1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Manager_Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waiver_Collaborator2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <label>Account Short Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Full Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waiver Collaborator</relationshipLabel>
        <relationshipName>Wavier_Collaborato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcknowledgementMailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AcknowledgementMailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comment__c</fullName>
        <label>Additional Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Field_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Field Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wavier_Collaborato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DFM Service CMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMDID__c</fullName>
        <formula>CRM_Device__r.CRMDID__c</formula>
        <label>CRM DID​</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device ID</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Waiver Collaborator</relationshipLabel>
        <relationshipName>Wavier_Collaborator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CollaboratorCancelledMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollaboratorCancelledMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollaboratorClosedMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollaboratorClosedMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CollaboratorRejectionMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollaboratorRejectionMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Shortname__c</fullName>
        <label>Created By Shortname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Full_Name__c</fullName>
        <label>Customer Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D1_National__c</fullName>
        <label>D1 National Access Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFMServiceOption__c</fullName>
        <label>DFMServiceOption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_Design_Type__c</fullName>
        <label>Design Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_Engineer__c</fullName>
        <label>DWC Engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_IPID__c</fullName>
        <label>DWC IPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_Service_CAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWC Service CAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFM_Service_CMP_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWC Service CMP Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFM_Service_DRCPLUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DFM Service DRCPLUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFM_Service_Litho__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWC Service Litho</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFM_Service_MCDMAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DFM Service MCD/MAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFM_Transaction_Id__c</fullName>
        <label>DWC Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRB_Group_uIds__c</fullName>
        <label>DRB Group uIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCServiceoption__c</fullName>
        <label>DRC Service Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRC_Deck_Version__c</fullName>
        <label>DWC Deck Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Rule_Addendum_Spec__c</fullName>
        <label>Design Rule Spec (addendum)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Rule_Addendum_Ver__c</fullName>
        <label>Design Rule Spec (addendum) Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Rule_Main_Rev__c</fullName>
        <label>Design Rule Spec Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Rule_Main_Spec__c</fullName>
        <label>Design Rule Spec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <formula>CRM_Device__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedDFM_Review_Completion_Date__c</fullName>
        <label>Expected DFM Review Completion Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Execution_Completion_Date__c</fullName>
        <label>Expected Execution Completion Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_QA_Completion_Date__c</fullName>
        <label>Expected QA Completion Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Validation_Completion_Date__c</fullName>
        <label>Expected Validation Completion Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <label>FAB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAE_Acc_ID__c</fullName>
        <label>FAE Acc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_DRC_Deck__c</fullName>
        <label>GF DRC Deck</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_Design_Rule_Spec_Addendum_Revision__c</fullName>
        <label>Design Rule Spec (addendum) Rev</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_Design_Rule_Spec_Addendum__c</fullName>
        <label>Design Rule Spec (addendum)</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_Design_Rule_Spec_Revision__c</fullName>
        <label>Design Rule Spec Rev</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GF_Design_Rule_Spec__c</fullName>
        <label>Design Rule Spec1</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCustomerAcceptsRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Accepts Risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomerAgreeToFix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Agree To Fix?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGfAcceptsRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceptional Arrangement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_All_PI_PW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is All PI PW ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Submit_4_DFM_Apprval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submit 4 DFM Apprval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sync_with_AIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In sync with Mantis?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_releasedToCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is releasedToCustomer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastRuleSelected_Customer__c</fullName>
        <label>LastRuleSelected_Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRuleSelected_GFRisk__c</fullName>
        <label>LastRuleSelected_GFRisk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout_Source__c</fullName>
        <label>Layout Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout_Type__c</fullName>
        <label>Layout Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MantisId__c</fullName>
        <label>MantisId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MantisIds__c</fullName>
        <label>MantisIds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mantis_DRCPLUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mantis DRCPLUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mantis_MAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mantis MAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mantis_MCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mantis MCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mask Set Title</label>
        <referenceTo>Mask_Set_Title__c</referenceTo>
        <relationshipLabel>Waiver Collaborator</relationshipLabel>
        <relationshipName>Waiver_Collaborator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <label>Mask Set Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stacks__c</fullName>
        <label>Metal Stacks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Layout_Source__c</fullName>
        <label>Other Layout Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Layout_Type__c</fullName>
        <label>Other Layout Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK_DRC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDK DRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLMDFM_Service_Request_Number__c</fullName>
        <label>PLMDFM Service Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTSR_ID__c</fullName>
        <externalId>true</externalId>
        <label>PTSR ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTSR_Number__c</fullName>
        <externalId>true</externalId>
        <label>PTSR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTSR_Service_Type__c</fullName>
        <label>PTSR Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRC Service Request</fullName>
                </value>
                <value>
                    <fullName>DFM Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PTSR_Status__c</fullName>
        <label>PTSR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Freeze</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PendingForCustomerMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PendingForCustomerMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingForFAEMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PendingForFAEMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimeDie__c</fullName>
        <label>PrimeDie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Die_Name__c</fullName>
        <label>Prime Die Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Die__c</fullName>
        <label>Prime Die</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <label>Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <label>Process Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Management__c</fullName>
        <label>Product Line Management</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progressbar_staus__c</fullName>
        <label>Workflow status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Engineer__c</fullName>
        <label>QA Engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revert_Collaborator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revert Collaborator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revert_Reason__c</fullName>
        <label>Revert Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revert_Stage__c</fullName>
        <label>Revert Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewSummaryMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReviewSummaryMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secure_Device__c</fullName>
        <label>Secure Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_AM__c</fullName>
        <label>Selected AM</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Customers__c</fullName>
        <label>Selected Customers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Shortname__c</fullName>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tapeout_Layers__c</fullName>
        <label>Tapeout Mask Layers with version</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Message__c</fullName>
        <label>Task Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Geo__c</fullName>
        <label>Tech Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Type__c</fullName>
        <label>Tech Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Cell_Name__c</fullName>
        <label>Top Cell Name</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Violation_Count_Limit__c</fullName>
        <label>Violation Count Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiver_Status__c</fullName>
        <label>Aggregated Waiver Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved,Exceptional arrangement</fullName>
                </value>
                <value>
                    <fullName>Approved,Customer agree to take risk</fullName>
                </value>
                <value>
                    <fullName>WEA</fullName>
                </value>
                <value>
                    <fullName>WCR</fullName>
                </value>
                <value>
                    <fullName>FCF</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PW</fullName>
                </value>
                <value>
                    <fullName>pWO</fullName>
                </value>
                <value>
                    <fullName>pOC</fullName>
                </value>
                <value>
                    <fullName>FD</fullName>
                </value>
                <value>
                    <fullName>VCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_Readiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow Readiness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Status__c</fullName>
        <formula>IF(OR(ISPICKVAL(PTSR_Status__c,&apos;Approved&apos;), ISPICKVAL(PTSR_Status__c,&apos;Open&apos;)), &apos;Pending&apos;,Text(PTSR_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_Options__c</fullName>
        <label>Customer Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAllPartyApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAllPartyApproved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustomerSelectionSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomerSelectionSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMulti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMulti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNonmatchmailsent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNonmatchmailsent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReleaseToCust4MultiDie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReleaseToCust4MultiDie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Waiver Collaborator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CRM_Device__c</columns>
        <columns>Mask_Set_Title__c</columns>
        <columns>Workflow_Status__c</columns>
        <columns>Progressbar_staus__c</columns>
        <columns>Waiver_Status__c</columns>
        <columns>NAME</columns>
        <columns>Tech_Geo__c</columns>
        <columns>PTSR_Number__c</columns>
        <columns>PTSR_Service_Type__c</columns>
        <columns>Prime_Die_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>GF_DRC_Deck__c</columns>
        <columns>DFMServiceOption__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Collaborator</fullName>
        <columns>NAME</columns>
        <columns>PTSR_Service_Type__c</columns>
        <columns>Waiver_Status__c</columns>
        <columns>Progressbar_staus__c</columns>
        <columns>DFM_Design_Type__c</columns>
        <columns>CRM_Device__c</columns>
        <columns>DFMServiceOption__c</columns>
        <columns>Mask_Set_Title__c</columns>
        <columns>Workflow_Status__c</columns>
        <columns>Tech_Geo__c</columns>
        <columns>PTSR_Number__c</columns>
        <columns>Prime_Die_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>GF_DRC_Deck__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_Collaborator</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Default_ColumnView</fullName>
        <columns>CRM_Device__c</columns>
        <columns>Mask_Set_Title_ID__c</columns>
        <columns>Progressbar_staus__c</columns>
        <columns>Workflow_Status__c</columns>
        <columns>Waiver_Status__c</columns>
        <columns>NAME</columns>
        <columns>Tech_Geo__c</columns>
        <columns>PTSR_Number__c</columns>
        <columns>Prime_Die__c</columns>
        <columns>PTSR_Service_Type__c</columns>
        <columns>Prime_Die_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>DFMServiceOption__c</columns>
        <columns>MantisId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_Default_ColumnView</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DFM_4_DE_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM 4 DE</label>
        <language>en_US</language>
        <queue>DFM_4_DE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_AM_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM AM</label>
        <language>en_US</language>
        <queue>DFM_AM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_PI_YE_4_FAB1_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM PI/YE 4 FAB1</label>
        <language>en_US</language>
        <queue>DFM_PI_YE_4_FAB1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_PI_YE_4_FAB7_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM PI/YE 4 FAB7</label>
        <language>en_US</language>
        <queue>DFM_PI_YE_4_FAB7</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_PI_YE_4_FAB8_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM PI/YE 4 FAB8</label>
        <language>en_US</language>
        <queue>DFM_PI_YE_4_FAB8</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_PI_YE_4_FAB9_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM PI YE 4 FAB9</label>
        <language>en_US</language>
        <queue>DFM_QA_4_FAB1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_QA_4_FAB1_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM QA 4 FAB1</label>
        <language>en_US</language>
        <queue>DFM_QA_4_FAB1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_QA_4_FAB7_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM QA 4 FAB7</label>
        <language>en_US</language>
        <queue>DFM_QA_4_FAB7</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_QA_4_FAB8_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM QA 4 FAB8</label>
        <language>en_US</language>
        <queue>DFM_QA_4_FAB8</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_QA_4_FAB9_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM QA 4 FAB9</label>
        <language>en_US</language>
        <queue>DFM_QA_4_FAB9</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFM_Waiver_Team_Wavier_Collaborator</fullName>
        <filterScope>Queue</filterScope>
        <label>DFM Manager Group</label>
        <language>en_US</language>
        <queue>DFM_Waiver_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Collaborator-{0000}</displayFormat>
        <label>Waiver Collaborator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waiver Collaborator</pluralLabel>
    <recordTypes>
        <fullName>DFM_4_Customer</fullName>
        <active>false</active>
        <label>DFM 4 Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>DFM_4_DFM_Users</fullName>
        <active>true</active>
        <label>DFM 4 DFM Users</label>
    </recordTypes>
    <recordTypes>
        <fullName>DFM_4_FAE</fullName>
        <active>true</active>
        <label>DFM 4 FAE</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>